# pico-eeprom24xx01

./: LICENSE  README.md
lib/: CMakeLists.txt  eeprom24xx01.c
lib/include/: eeprom24xx01.h
